--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <resources>
   <color name="splashscreen_background">#FDF8FF</color>
-  <color name="iconBackground">#FEF9DE</color>
+  <color name="iconBackground">#FDF8FF</color>
   <color name="colorPrimary">#023c69</color>
   <color name="colorPrimaryDark">#FDF8FF</color>
 </resources>
