--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
   <color name="iconBackground">#FDF8FF</color>
   <color name="colorPrimary">#023c69</color>
   <color name="colorPrimaryDark">#FDF8FF</color>
+  <color name="notification_icon_color">#ffffff</color>
 </resources>
